--- a/style.css
+++ b/style.css
@@ -68,3 +68,55 @@ nav li {
   display: inline;
   margin-left: 20px;
 }
+
+.info {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-bottom: 40px;
+}
+
+.info-text {
+  font-size: 36px;
+  color: #1f2937;
+  font-weight: 900;
+}
+
+.pictures {
+  display: flex;
+  gap: 50px;
+}
+
+.pictures img {
+  border: #3882f6;
+  border-style: solid;
+  border-width: 5px;
+  border-radius: 10px;
+  margin-bottom: 5px;
+  width: 200px;
+}
+
+.pictures div {
+  text-align: center;
+  width: 200px;
+}
+
+.quote-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #e5e7eb;
+  padding: 70px;
+}
+
+.quote {
+  font-size: 36px;
+  color: #1f2937;
+  font-weight: 300;
+  text-align: end;
+}
+
+.quote-author {
+  font-size: 20px;
+  font-weight: 900;
+}
